# opentmpfiles

./: .gitignore  .shellcheckrc  .travis.yml  LICENSE  Makefile  README.md  build.mk  meson.build  meson_options.txt  tmpfiles  tmpfiles.sh
ci/: travis.sh
openrc/: opentmpfiles-dev.initd  opentmpfiles-setup-dev.initd  opentmpfiles-setup.initd  tmpfiles.dev  tmpfiles.setup
src/: Makefile  cli.c  cli.h  headers.h  main.c  module.mk  set.c  set.h  tmpfiles.h  xfuncs.h
test/: .gitignore  Makefile  cli_test.cc  module.mk  set_test.cc  test.h  xfuncs_test.cc
